pagina estática so2

--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
       </div>
       <div class="card-container">
         <div class="card-container-img" style="height: 50%;">
-          <img src="" alt="img-estudiante" style="height: 100%; width: 100%;">
+          <img src="carlosTorres.jpeg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
           <h3>Nombre: <span style="color: orange;">Carlos Torres</span></h3>
-          <h3>Edad: <span style="color: orange;">19</span></h3>
+          <h3>Edad: <span style="color: orange;">22</span></h3>
+          <h3>Cuenta: <span style="color: orange;">20191000105</span></h3>
         </div>
       </div>
     </div>
