pagina estática so2, cambiado los colores

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <style>
     body {
+      background-color: antiquewhite;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -14,6 +15,7 @@
     }
 
     .container {
+      background-color: aqua;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -39,6 +41,7 @@
     }
 
     .card-container {
+      background-color: aliceblue;
       height: 100%;
       width: 200px;
       padding: 10px;
@@ -51,19 +54,19 @@
 </head>
 <body>
   <main style="display: flex; flex-direction: column; align-items: center;">
-    <h1>SISTEMAS OPERATIVOS II <span style="color: orange;">1600</span></h1>
+    <h1>SISTEMAS OPERATIVOS II <span style="color: brown;">1600</span></h1>
     <div class="container">
       <div class="container-img">
         <img src="support.png" alt="Imagen" class="img">
       </div>
       <div class="container-info" style="margin-right: 10px;">
-        <h2>Docente: <span style="color: orange;">MSc.Rommell Duval Vargas Laitano</span></h2>
-        <h2>Clases impartidas actualmente: <span style="color: orange;">Administración I, Sistemas Operativos I, Sistemas Operativos II</span></h2>
-        <h2>Especialización: <span style="color: orange;">Infraestructura</span></h2>
+        <h2>Docente: <span style="color: brown;">MSc.Rommell Duval Vargas Laitano</span></h2>
+        <h2>Clases impartidas actualmente: <span style="color: brown;">Administración I, Sistemas Operativos I, Sistemas Operativos II</span></h2>
+        <h2>Especialización: <span style="color: brown;">Infraestructura</span></h2>
       </div>
     </div>
     <div style="text-align: center; margin-top: 50px;">
-      <h2 style="color: orange;">Integrantes</h2>
+      <h2 style="color: brown;">Integrantes</h2>
       <hr>
     </div>
     <div class="s-container">
@@ -72,9 +75,9 @@
           <img src="maria.jpg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
-          <h3>Nombre: <span style="color: orange;">Maria Mejía</span></h3>
-          <h3>Edad: <span style="color: orange;">21</span></h3>
-          <h3>Cuenta: <span style="color: orange;">20211021536</span></h3>
+          <h3>Nombre: <span style="color:brown;">Maria Mejía</span></h3>
+          <h3>Edad: <span style="color: brown;">21</span></h3>
+          <h3>Cuenta: <span style="color: brown;">20211021536</span></h3>
         </div>
       </div>
       <div class="card-container">
@@ -82,9 +85,9 @@
           <img src="carlos.jpeg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
-          <h3>Nombre: <span style="color: orange;">Carlos Flores</span></h3>
-          <h3>Edad: <span style="color: orange;">19</span></h3>
-          <h3>Cuenta: <span style="color: orange;">20221001802</span></h3>
+          <h3>Nombre: <span style="color: brown;">Carlos Flores</span></h3>
+          <h3>Edad: <span style="color: brown;">19</span></h3>
+          <h3>Cuenta: <span style="color: brown;">20221001802</span></h3>
         </div>
       </div>
       <div class="card-container">
@@ -92,9 +95,9 @@
           <img src="lisbeth.jpeg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
-          <h3>Nombre: <span style="color: orange;">Lisbeth Erazo</span></h3>
-          <h3>Edad: <span style="color: orange;">23</span></h3>
-          <h3>Cuenta: <span style="color: orange;">20191002029</span></h3>
+          <h3>Nombre: <span style="color: brown;">Lisbeth Erazo</span></h3>
+          <h3>Edad: <span style="color: brown;">23</span></h3>
+          <h3>Cuenta: <span style="color: brown;">20191002029</span></h3>
         </div>
       </div>
       <div class="card-container">
@@ -102,9 +105,9 @@
           <img src="dustin.jpeg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
-          <h3>Nombre: <span style="color: orange;">Dustin Barahona</span></h3>
-          <h3>Edad: <span style="color: orange;">21</span></h3>
-          <h3>Cuenta: <span style="color: orange;">20211020011</span></h3>
+          <h3>Nombre: <span style="color: brown;">Dustin Barahona</span></h3>
+          <h3>Edad: <span style="color: brown;">21</span></h3>
+          <h3>Cuenta: <span style="color: brown;">20211020011</span></h3>
         </div>
       </div>
       <div class="card-container">
@@ -112,9 +115,9 @@
           <img src="carlosTorres.jpeg" alt="img-estudiante" style="height: 100%; width: 100%;">
         </div>
         <div class="card-container-body" style="width: 100%;">
-          <h3>Nombre: <span style="color: orange;">Carlos Torres</span></h3>
-          <h3>Edad: <span style="color: orange;">22</span></h3>
-          <h3>Cuenta: <span style="color: orange;">20191000105</span></h3>
+          <h3>Nombre: <span style="color: brown;">Carlos Torres</span></h3>
+          <h3>Edad: <span style="color: brown;">22</span></h3>
+          <h3>Cuenta: <span style="color: brown;">20191000105</span></h3>
         </div>
       </div>
     </div>
